# rgmailer

./: .gitignore  Cargo.toml  README.md  justfile  settings.toml  test-setup.tgz
config/: console-rolling.yaml  rolling.yaml
coverage/: index.html  tarpaulin-report.html
home/: .gitignore
src/: auth.rs  envelope.rs  fileops.rs  lib.rs  mailer.rs  main.rs  otp.rs  settings.rs
tests/: bad-envelope.toml  home-structure.tgz  test-message.toml  test-settings.toml
tests/queue/: sent-message.toml
