[package]
name = "rgmailer"
version = "0.2.5"
edition = "2021"
authors = ["darryl.west@raincitysoftware.com"]
rust-version = "1.70"
description = "Sends a simple email message using a structured toml file called an envelope."
keywords = ["smtp", "email", "gmail" ]
license = "Apach-2.0"
readme = "README.md"
homepage = "https://github.com/darrylwest/rgmailer"
repository = "https://github.com/darrylwest/rgmailer"
exclude = [ ".github/*" ]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.4.7", features = ["derive"] }
fastrand = "2.0.1"
lettre = "0.11.1"
log = "0.4.20"
log4rs = "1.2.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_derive = "1.0.190"
serde_yaml = "0.9.27"
toml = "0.8.5"
